--- a/blog.html
+++ b/blog.html
@@ -49,82 +49,85 @@
       </section>
       <!-- /hero -->
     </div>
-    <section class="blog-post post-1">
-      <div class="wrapper clearfix">
-        <div class="blog-post-img">
-          <img src="images/blog-1.jpg" alt="" />
+    <div class="wrapper">
+      <section class="blog-post post-1">
+        <div class="wrapper clearfix">
+          <div class="blog-post-img">
+            <img src="images/blog-1.jpg" alt="" />
+          </div>
+          <!-- /blog-post-img -->
+          <div class="blog-post-info clearfix">
+            <h2 class="blog-date">14 Jun - 2021</h2>
+            <h3 class="blog-title">
+              Idea of denouncing pleasure and praising pain was born
+            </h3>
+            <p class="blog-desc">
+              The great explorer of the truth, the master of human happiness
+              rejects, dislike pleasure itself...
+            </p>
+            <i class="fa fa-arrow-circle-o-right"></i>
+          </div>
+          <!-- /blog-post-info -->
         </div>
-        <!-- /blog-post-img -->
-        <div class="blog-post-info clearfix">
-          <h2 class="blog-date">14 Jun - 2021</h2>
-          <h3 class="blog-title">
-            Idea of denouncing pleasure and praising pain was born
-          </h3>
-          <p class="blog-desc">
-            The great explorer of the truth, the master of human happiness
-            rejects, dislike pleasure itself...
-          </p>
-          <i class="fa fa-arrow-circle-o-right"></i>
+        <!-- /wrapper -->
+      </section>
+
+      <section class="blog-post post-2">
+        <div class="wrapper clearfix">
+          <div class="blog-post-img">
+            <img src="images/blog2.jpg" alt="" />
+          </div>
+          <!-- /blog-post-img -->
+          <div class="blog-post-info clearfix">
+            <h2 class="blog-date">09 JUN - 2021</h2>
+            <h3 class="blog-title">
+              Denouncing pleasure clean and praising pain was born
+            </h3>
+            <p class="blog-desc">
+              Great explorer of the truth, the master-builder of human happiness
+              rejects, dislike pleasure itself...
+            </p>
+            <i class="fa fa-arrow-circle-o-right"></i>
+          </div>
+          <!-- /blog-post-info -->
         </div>
-        <!-- /blog-post-info -->
-      </div>
-      <!-- /wrapper -->
-    </section>
-    <section class="blog-post post-2">
-      <div class="wrapper clearfix">
-        <div class="blog-post-img">
-          <img src="images/blog2.jpg" alt="" />
+        <!-- /wrapper -->
+      </section>
+      <section class="blog-post post-3">
+        <div class="wrapper clearfix">
+          <div class="blog-post-img">
+            <img src="images/blog3.jpg" alt="" />
+          </div>
+          <!-- /blog-post-img -->
+          <div class="blog-post-info clearfix">
+            <h2 class="blog-date">14 Jun - 2021</h2>
+            <h3 class="blog-title">
+              Idea of denouncing pleasure and praising pain was born
+            </h3>
+            <p class="blog-desc">
+              The great explorer of the truth, the master of human happiness
+              rejects, dislike pleasure itself...
+            </p>
+            <i class="fa fa-arrow-circle-o-right"></i>
+          </div>
+          <!-- /blog-post-info -->
         </div>
-        <!-- /blog-post-img -->
-        <div class="blog-post-info clearfix">
-          <h2 class="blog-date">09 JUN - 2021</h2>
-          <h3 class="blog-title">
-            Denouncing pleasure clean and praising pain was born
-          </h3>
-          <p class="blog-desc">
-            Great explorer of the truth, the master-builder of human happiness
-            rejects, dislike pleasure itself...
-          </p>
-          <i class="fa fa-arrow-circle-o-right"></i>
+        <!-- /wrapper -->
+      </section>
+      <section class="buttons">
+        <div class="wrapper clearfix">
+          <ul class="clearfix button-list">
+            <li>&lt;</li>
+            <li>1</li>
+            <li>2</li>
+            <li>...</li>
+            <li>8</li>
+            <li>&gt;</li>
+          </ul>
         </div>
-        <!-- /blog-post-info -->
-      </div>
-      <!-- /wrapper -->
-    </section>
-    <section class="blog-post post-3">
-      <div class="wrapper clearfix">
-        <div class="blog-post-img">
-          <img src="images/blog3.jpg" alt="" />
-        </div>
-        <!-- /blog-post-img -->
-        <div class="blog-post-info clearfix">
-          <h2 class="blog-date">14 Jun - 2021</h2>
-          <h3 class="blog-title">
-            Idea of denouncing pleasure and praising pain was born
-          </h3>
-          <p class="blog-desc">
-            The great explorer of the truth, the master of human happiness
-            rejects, dislike pleasure itself...
-          </p>
-          <i class="fa fa-arrow-circle-o-right"></i>
-        </div>
-        <!-- /blog-post-info -->
-      </div>
-      <!-- /wrapper -->
-    </section>
-    <section class="buttons">
-      <div class="wrapper clearfix">
-        <ul class="clearfix button-list">
-          <li>&lt;</li>
-          <li>1</li>
-          <li>2</li>
-          <li>...</li>
-          <li>8</li>
-          <li>&gt;</li>
-        </ul>
-      </div>
-      <!-- /wrapper -->
-    </section>
+        <!-- /wrapper -->
+      </section>
+    </div>
     <footer>
       <div class="company-info clearfix">
         <div class="address">
