--- a/contact.html
+++ b/contact.html
@@ -56,76 +56,77 @@
         </div>
       </section>
       <!-- /hero -->
+
+      <section class="contact-us">
+        <div class="clearfix contact-container">
+          <!-- /contact-details -->
+          <div class="contact-details">
+            <ul>
+              <li class="clearfix">
+                <div class="contact-icon">
+                  <img src="images/phone.png" alt="" />
+                </div>
+                <!-- contact-icon -->
+                <div class="contact-info">
+                  <p>call us:</p>
+                  <p></p>
+                  <p>+001 123 222</p>
+                </div>
+                <!-- /contact-info -->
+              </li>
+              <li class="clearfix">
+                <div class="contact-icon">
+                  <img src="images/map.png" alt="" />
+                </div>
+                <!-- contact-icon -->
+                <div class="contact-info">
+                  <p>address:</p>
+                  <p></p>
+                  <p>Street 23, Toronto p.n</p>
+                  <p>300 Canada</p>
+                </div>
+                <!-- /contact-info -->
+              </li>
+              <li class="clearfix">
+                <div class="contact-icon">
+                  <img src="images/envelope.png" alt="" />
+                </div>
+                <!-- contact-icon -->
+                <div class="contact-info">
+                  <p>email:</p>
+                  <p></p>
+                  <p>info@gmail.com</p>
+                </div>
+                <!-- /contact-info -->
+              </li>
+            </ul>
+          </div>
+          <!-- /contact-form -->
+          <div class="contact-form clearfix">
+            <form action="">
+              <div class="contact-form-input">
+                <input type="text" placeholder="NAME*" />
+                <input type="email" placeholder="EMAIL*" />
+                <input type="text" placeholder="SUBJECT" />
+              </div>
+              <!-- /contact-form-input -->
+              <div class="contact-form-msg">
+                <textarea
+                  name="contact"
+                  cols=""
+                  rows=""
+                  placeholder="MESSAGE"
+                  id="contact"
+                ></textarea>
+                <input type="submit" />
+              </div>
+              <!-- /contact-form-msg -->
+            </form>
+          </div>
+        </div>
+        <!-- /wrapper -->
+      </section>
     </div>
-    <section class="contact-us">
-      <div class="wrapper clearfix contact-container">
-        <div class="contact-details">
-          <ul>
-            <li class="clearfix">
-              <div class="contact-icon">
-                <img src="images/phone.png" alt="" />
-              </div>
-              <!-- contact-icon -->
-              <div class="contact-info">
-                <p>call us:</p>
-                <p></p>
-                <p>+001 123 222</p>
-              </div>
-              <!-- /contact-info -->
-            </li>
-            <li class="clearfix">
-              <div class="contact-icon">
-                <img src="images/map.png" alt="" />
-              </div>
-              <!-- contact-icon -->
-              <div class="contact-info">
-                <p>address:</p>
-                <p></p>
-                <p>Street 23, Toronto p.n</p>
-                <p>300 Canada</p>
-              </div>
-              <!-- /contact-info -->
-            </li>
-            <li class="clearfix">
-              <div class="contact-icon">
-                <img src="images/envelope.png" alt="" />
-              </div>
-              <!-- contact-icon -->
-              <div class="contact-info">
-                <p>email:</p>
-                <p></p>
-                <p>info@gmail.com</p>
-              </div>
-              <!-- /contact-info -->
-            </li>
-          </ul>
-        </div>
-        <!-- /contact-details -->
-        <div class="contact-form clearfix">
-          <form action="">
-            <div class="contact-form-input">
-              <input type="text" placeholder="NAME*" />
-              <input type="email" placeholder="EMAIL*" />
-              <input type="text" placeholder="SUBJECT" />
-            </div>
-            <!-- /contact-form-input -->
-            <div class="contact-form-msg">
-              <textarea
-                name="contact"
-                cols=""
-                rows=""
-                placeholder="MESSAGE"
-                id="contact"
-              ></textarea>
-              <input type="submit" />
-            </div>
-            <!-- /contact-form-msg -->
-          </form>
-        </div>
-        <!-- /contact-form -->
-      </div>
-      <!-- /wrapper -->
-    </section>
     <footer>
       <div class="company-info clearfix">
         <div class="address">
